--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "jacobbennett/pjax": "~1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jacobbennett/pjax": "~1.0",
         "laravel/framework": "^8.12",
+        "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
